# unicpp

./: .clang-format  .gitignore  CMakeLists.txt  DISCLAIMER.md  README.md  build-linux.sh  build-windows.bat  cpp.hint  unicpp.sln  unicpp.vcxproj  unicpp.vcxproj.filters
ref/: info.txt
samples/: hello-world.cpp
src/: aes.h  arg.h  array.h  atomic.h  bada.h  bigmath.h  c25519.h  char.h  clipboard.h  codegen.h  color.h  console.h  container.h  cursor.h  debug.h  dictionary.h  directory.h  dumb.h  error.h  event.h  file.h  fp25519.h  graphics.h  hash.h  hunic.h  include.h  input.h  joystick.h  keyboard.h  keyword.h  list.h  lock.h  main.h  math.h  md5.h  memory.h  mouse.h  network.h  path.h  pipe.h  (+39 more)
src/import/stdc/: function.h
src/import/winapi/: function.h  type.h  unint.h  unintimpl.h  util.h  value.h
src/pre/: console.h  process.h
src/unicpp/: aes.cpp  aes.hpp  aes.ipp  arg.cpp  arg.hpp  arg.ipp  array.hpp  array.ipp  atomic.cpp  atomic.hpp  bada.cpp  bada.hpp  bada.ipp  bigmath.cpp  bigmath.hpp  bigmath.ipp  c25519.cpp  c25519.hpp  c25519.ipp  char.cpp  char.hpp  char.ipp  clipboard.cpp  clipboard.hpp  clipboard.ipp  codegen.cpp  codegen.hpp  color.cpp  color.hpp  color.ipp  colorfx.cpp  colorfx.hpp  console.cpp  console.hpp  container.cpp  container.hpp  container.ipp  debug.hpp  dictionary.cpp  dictionary.hpp  (+177 more)
tests/: compile.cpp  compile_gcc.cpp
